@@ -1,5 +1,12 @@
 2005-12-14  Timothy Hatcher  <timothy@apple.com>
 
+        <rdar://problem/4381444> Remove GMail-specific work-around previously added
+
+        * khtml/ecma/kjs_html.cpp:
+        (KJS::HTMLElement::textAreaGetter): Remove GMail workaround.
+
+2005-12-14  Timothy Hatcher  <timothy@apple.com>
+
         Merged fix from TOT to Safari-1-3-branch
 
     2005-12-14  Beth Dakin  <bdakin@apple.com>
